
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int error_handle () ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fwrite (char*,int,int,int *) ;
 int memcpy (char*,int ,int) ;
 int nseh ;
 int rawdoc ;
 int seh ;

int main(){
 char buff[200000];
 memcpy(buff,rawdoc,101888);
   memcpy(buff+79555,nseh,4);
   memcpy(buff+79559,seh,4);
 FILE* f=fopen("office.doc","wb");
 if(!f)
    error_handle();
   fwrite(buff,1,101888,f);
   fclose(f);

 return 0;
 }
